--- a/compute-hhi.ipynb
+++ b/compute-hhi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3603ebf7",
+   "id": "be5f343e",
    "metadata": {},
    "source": [
     "# HHI of Stargaze network\n",
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "90cf33f1",
+   "execution_count": 44,
+   "id": "9a718ede",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33a45f38",
+   "id": "ed5ac42a",
    "metadata": {},
    "source": [
     "Get the delegation associated with each validator."
@@ -30,51 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "2f46f641",
+   "execution_count": 45,
+   "id": "ec5a40be",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'operator_address': 'starsvaloper1qz3zj0j3546xywfe8qwcve5flne9w98qu90048',\n",
-       " 'consensus_pubkey': {'@type': '/cosmos.crypto.ed25519.PubKey',\n",
-       "  'key': 'mRscRbPomJJDXnG9R6o/CwvVPvCWqISXPbFskv30p8o='},\n",
-       " 'jailed': False,\n",
-       " 'status': 'BOND_STATUS_BONDED',\n",
-       " 'tokens': '2006079000000',\n",
-       " 'delegator_shares': '2006079000000.000000000000000000',\n",
-       " 'description': {'moniker': '0xSR | 0xSR.com',\n",
-       "  'identity': 'E764DC957E82F233',\n",
-       "  'website': 'https://0xSR.com',\n",
-       "  'security_contact': 'sr@0xsr.com',\n",
-       "  'details': 'You can reach me on my website, which is https://0xSR.com, all the time.'},\n",
-       " 'unbonding_height': '0',\n",
-       " 'unbonding_time': '1970-01-01T00:00:00Z',\n",
-       " 'commission': {'commission_rates': {'rate': '0.050000000000000000',\n",
-       "   'max_rate': '1.000000000000000000',\n",
-       "   'max_change_rate': '0.990000000000000000'},\n",
-       "  'update_time': '2021-11-01T09:41:32.057072748Z'},\n",
-       " 'min_self_delegation': '1'}"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "validators = json.load(open('validators.json', 'r'))['validators']\n",
-    "validators[0]\n",
-    "# tokens = [int(v['tokens']) for v in validators]\n",
-    "# tokens"
+    "tokens = [int(v['tokens']) for v in validators]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "12d0db33",
+   "execution_count": 46,
+   "id": "ecb9a189",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,8 +60,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "a93d63c6",
+   "execution_count": 47,
+   "id": "78a05ed8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,8 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "2704a4f3",
+   "execution_count": 48,
+   "id": "ef54cda0",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +96,7 @@
        "156.48663784255817"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
