--- a/compute-hhi.ipynb
+++ b/compute-hhi.ipynb
@@ -5,14 +5,31 @@
    "id": "be5f343e",
    "metadata": {},
    "source": [
-    "# HHI of Stargaze network\n",
-    "\n",
+    "# HHI of Stargaze network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "afc3509a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from typing import List"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ef244c2",
+   "metadata": {},
+   "source": [
     "Get the state of all validators."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "9a718ede",
    "metadata": {},
    "outputs": [],
@@ -30,19 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "ec5a40be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
     "validators = json.load(open('validators.json', 'r'))['validators']\n",
     "tokens = [int(v['tokens']) for v in validators]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "ecb9a189",
    "metadata": {},
    "outputs": [],
@@ -60,13 +76,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "78a05ed8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List\n",
-    "\n",
     "def hhi (marketshares: List[float]):\n",
     "    '''\n",
     "    \"The HHI is calculated by squaring the market share of each firm competing in the market \n",
@@ -86,17 +100,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "ef54cda0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "156.48663784255817"
+       "156.48671026391222"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
